--- a/README
+++ b/README
@@ -3,57 +3,50 @@ h1. RedCloth
 
 h2. Humane text for Ruby
 
-RedCloth is a module for using Textile in Ruby.  Textile is a
-text format.  A very simple text format.  Another stab at making
-readable text that can be converted to HTML.
+RedCloth is a module for using Textile in Ruby.  Textile is a text format.  A very simple text format.  Another stab at making readable text that can be converted to HTML.
 
-Textile is (c) 2003 Dean Allen.  All rights reserved.
-You can read more "here":http://www.textism.com/tools/textile/.
+Textile is (c) 2003 Dean Allen.  All rights reserved. You can read more "here":http://www.textism.com/tools/textile/.
 
-RedCloth is also based on PyTextile, which is:
-Copyright (c) 2003, Mark Pilgrim, http://diveintomark.org/
-All rights reserved.  You can read more about PyTextile
-"here":http://diveintomark.org/projects/pytextile/.
+RedCloth is also based on PyTextile, which is: Copyright (c) 2003, "Mark Pilgrim":http://diveintomark.org/.  All rights reserved.  You can read more about PyTextile "here":http://diveintomark.org/projects/pytextile/.
 
 
 h2. Installing RedCloth
 
 To install RedCloth via raa-install:
 
+<pre>
   raa-install -i redcloth
+</pre>
 
 Or download RedCloth and simply run the install.rb like so:
 
-<code>
+<pre>
   ruby install.rb config
   ruby install.rb setup
   sudo ruby install.rb install
-</code>
+</pre>
 
 
 h2. Using RedCloth
 
-The RedCloth class is an extension of Ruby's String class.
-Use it like you would a String:
+The RedCloth class is an extension of Ruby's String class. Use it like you would a String:
 
-<code>
+<pre>
   >> r = RedCloth.new "*strong text* and _emphasized text_"
   => "*strong text* and _emphasized text_"
   >> r.gsub!( 'text', 'words' )
   => "*strong words* and _emphasized words_"
-</code>
+</pre>
 
-To generate HTML from your RedCloth object, use the
-@RedCloth#to_html@ method:
+To generate HTML from your RedCloth object, use the @RedCloth#to_html@ method:
 
-<code>
+<pre>
   >> r.to_html
   => "<p><strong>strong words</strong> and <em>emphasized words</em></p>"
-</code>
+</pre>
 
 
 h2. The Textile language
 
-See the "Textile home page":http://www.textism.com/tools/textile/ for
-details on the Textile language.
+See the "Textile home page":http://www.textism.com/tools/textile/ for details on the Textile language.
 
