--- a/README
+++ b/README
@@ -18,7 +18,7 @@ To install RedCloth via raa-install:
   raa-install -i redcloth
 </pre>
 
-Or download RedCloth and simply run the install.rb like so:
+Or "download RedCloth":http://prdownloads.sourceforge.net/yaml4r/redcloth-0.41.tar.gz and simply run the install.rb like so:
 
 <pre>
   ruby install.rb config
