--- a/doc/README
+++ b/doc/README
@@ -35,7 +35,7 @@ To install RedCloth via raa-install:
   raa-install -i redcloth
 </pre>
 
-Or "download RedCloth":http://prdownloads.sourceforge.net/yaml4r/redcloth-2.0.4.tar.gz and simply run the install.rb like so:
+Or "download RedCloth":http://rubyforge.org/frs/download.php/528/redcloth-2.0.6.tar.gz and simply run the install.rb like so:
 
 <pre>
   ruby install.rb config
