--- a/doc/README
+++ b/doc/README
@@ -1,48 +1,58 @@
-h1. RedCloth
+p=. !redcloth-title.png!
 
+<div style="font-family: verdana, arial, sans-serif; font-size: 10pt; border-left: solid 1px #999; width: 200px; float: right;">
 
-h2. Humane text for Ruby
+*Get RedCloth*
+
+p(example1). *Latest version:* "2.0.7":http://redcloth.rubyforge.org/
+
+Take a complete tour of Textile at "A Textile Reference":http://hobix.com/textile/.
+
+For fast syntax checking, try the "Quick Reference":http://hobix.com/textile/quick.html.
+
+p(example1). Upgrade with RubyGems!  Try: 
+@gem -Ri RedCloth@.
+
+*RedCloth Links*
+
+"Instiki":http://instiki.org is the greatest Wiki ever!  Uses RedCloth for its markup!
+
+"Hobix":http://hobix.com is a lovely little blogging package which uses RedCloth for
+blog entries.
+
+</div>
 
 RedCloth is a module for using Textile in Ruby.  Textile is a text format.  A very simple text format.  Another stab at making readable text that can be converted to HTML.
 
-Textile is (c) 2003 Dean Allen.  All rights reserved. You can read more "here":http://www.textism.com/tools/textile/.
+h2. What is Textile?
 
-RedCloth is also based on PyTextile, which is: Copyright (c) 2003, "Mark Pilgrim":http://diveintomark.org/.  All rights reserved.  You can read more about PyTextile "here":http://diveintomark.org/projects/pytextile/.
+Textile is a simple markup language.
 
-h2. About Version 2.0
+table{width:400px}.
+|_. textile |_. to |_. html |
+| ==_a phrase_== | -> | _a phrase_ |
+| ==*a phrase*== | -> | *a phrase* |
+| ==_*a phrase*_== | -> | _*a phrase*_ |
+| =="Google":http://google.com== | -> | "Google":http://google.com |
 
-Last year, a new version of Textile was released for PHP.  This 2.0 version allowed specification of style attributes and element alignments.  Below, is a header element with a green font coloring added.
+No need to use verbose HTML to build your docs, your blogs, your pages.  Textile gives you readable text while you're writing and beautiful text for your readers.  And if you need to break out into HTML, Textile will allow you to do so.
 
-<pre>
-  h2{color:green}. This is a title
-</pre>
+Textile also handles some subtleties of formatting which will enhance your document's readability:
 
-You can also add elements ids, classes, and language settings.
+* Single- and double-quotes around words or phrases are converted to curly quotations, much easier on
+  the eye.  "Observe!"
 
-<pre>
-  h2(class)
-  h2(#id)
-  h2[language]
-</pre>
+* Double hyphens are replaced with an em-dash.  Observe -- very nice!
 
-RedCloth 2.0 has been completely recoded and tested with Ruby versions 1.8.0 and 1.6.8.
+* Single hypens are replaced with en-dashes. Observe - so cute!
 
-h2. Installing RedCloth
+* Triplets of periods become an ellipsis.  Observe...
 
-To install RedCloth via raa-install:
+* The letter 'x' becomes a dimension sign when used alone.  Observe: 2 x 2.
 
-<pre>
-  raa-install -i redcloth
-</pre>
+* Conversion of ==(TM)== to (TM), ==(R)== to (R), ==(C)== to (C).
 
-Or "download RedCloth":http://rubyforge.org/frs/download.php/528/redcloth-2.0.6.tar.gz and simply run the install.rb like so:
-
-<pre>
-  ruby install.rb config
-  ruby install.rb setup
-  sudo ruby install.rb install
-</pre>
-
+For more on Textile's language, hop over to "A Textile Reference":http://hobix.com/textile/.
 
 h2. Using RedCloth
 
@@ -63,6 +73,26 @@ To generate HTML from your RedCloth object, use the @RedCloth#to_html@ method:
 </pre>
 
 
-h2. The Textile language
+h2. Installing RedCloth
 
-See the "Textile home page":http://www.textism.com/tools/textile/ for details on the Textile language.
+To install RedCloth via RubyGems:
+
+<pre>
+  gem -Ri RedCloth
+</pre>
+
+Or "download RedCloth":http://rubyforge.org/frs/download.php/528/redcloth-2.0.6.tar.gz and simply run the install.rb like so:
+
+<pre>
+  ruby install.rb config
+  ruby install.rb setup
+  sudo ruby install.rb install
+</pre>
+
+
+h2. Acknowledgements
+
+Textile is (c) 2003 Dean Allen.  All rights reserved. You can read more "here":http://www.textism.com/tools/textile/.
+
+RedCloth is also based on PyTextile, which is: Copyright (c) 2003, "Mark Pilgrim":http://diveintomark.org/.  All rights reserved.  You can read more about PyTextile "here":http://dealmeida.net/projects/textile.
+
