--- %YAML:1.0 - version: 2.0.8   date: 2004-05-22   changes:     - First scan of the glyphs() method only scans for pre|notextile|code, the       deeper passes scan for all HTML.  Now inlines work around HTML tags!       (What a pain!)     - Moved tables and blocks into glyphs to keep them shielded from the parser       if they are in <pre> tags.     - Patch by Denis Mertz to speed up RedCloth by compiling the various RegExps       only once.  Thanks, David!

--- a/doc/README
+++ b/doc/README
@@ -19,8 +19,7 @@ h4. RedCloth Links
 
 "Instiki":http://www.instiki.org is the greatest Wiki ever!  Uses RedCloth for its markup!
 
-"Hobix":http://hobix.com is a lovely little blogging package which uses RedCloth for
-blog entries.
+"Hobix":http://hobix.com is a lovely little blogging package which uses RedCloth for blog entries.
 
 </div>
 
