--- a/doc/CHANGELOG
+++ b/doc/CHANGELOG
@@ -1,4 +1,9 @@
 --- %YAML:1.0
+- version: 2.0.9
+  date: 2004-05-22
+  changes:
+    - Improved RDoc.  Ri documentation is auto-installed now!
+
 - version: 2.0.8
   date: 2004-05-22
   changes:
