--- a/doc/CHANGELOG
+++ b/doc/CHANGELOG
@@ -1,9 +1,11 @@
 --- %YAML:1.0
 - version: 2.0.9
-  date: 2004-05-25
+  date: 2004-05-26
   changes:
-    - Links were consuming closing HTML tags.  (See latest test in tests/links.yml.)
     - Improved RDoc.  Ri documentation is auto-installed now!
+    - Links were consuming closing HTML tags.  (See latest test in tests/links.yml.)
+    - Further speed patch from Denis.  Good good.
+    - Patch by F. Ros to fix <pre> tags with class settings.
 
 - version: 2.0.8
   date: 2004-05-22
