--- a/doc/README
+++ b/doc/README
@@ -1,6 +1,6 @@
 p=. !redcloth-title.png!
 
-<div style="font-family: verdana, arial, sans-serif; font-size: 10pt; border-left: solid 1px #999; width: 200px; float: right;">
+<div id="sidebar">
 
 h4. Get RedCloth
 
@@ -13,7 +13,7 @@ For fast syntax checking, try the "Quick Reference":http://hobix.com/textile/qui
 p(example1). Upgrade with RubyGems!  Try: 
 @gem -Ri RedCloth@.
 
-See the "project page":http://rubyforge.org/projects/redcloth/ for bug reporting, old releases and CVS instructions.
+See the "project page":http://rubyforge.org/projects/redcloth/ for bug reporting, old releases and CVS instructions.  "Documentation":http://redcloth.rubyforge.org/rdoc/ is also hosted at RubyForge.
 
 h4. RedCloth Links
 
@@ -30,11 +30,11 @@ h2. What is Textile?
 Textile is a simple markup language.
 
 table{width:400px}.
-|_. textile |_. to |_. html |
-| ==_a phrase_== | -> | _a phrase_ |
-| ==*a phrase*== | -> | *a phrase* |
-| ==_*a phrase*_== | -> | _*a phrase*_ |
-| =="Google":http://google.com== | -> | "Google":http://google.com |
+|_. textile|_. to|_. html|
+| ==_a phrase_== |->|_a phrase_|
+| ==*a phrase*== |->|*a phrase*|
+| ==_*a phrase*_== |->|_*a phrase*_|
+| =="Google":http://google.com== |->|"Google":http://google.com|
 
 No need to use verbose HTML to build your docs, your blogs, your pages.  Textile gives you readable text while you're writing and beautiful text for your readers.  And if you need to break out into HTML, Textile will allow you to do so.
 
