--- a/doc/CHANGELOG
+++ b/doc/CHANGELOG
@@ -1,4 +1,11 @@
 --- %YAML:1.0
+- version: 2.0.12
+  date: 2004-08-09
+  changes:
+    - Escaping tighter for <pre> tags that share a single line.
+    - No more String#htmlesc!.  Moved to RedCloth#htmlesc.
+    - Pruned out the code that was handling multibyte.
+
 - version: 2.0.11
   date: 2004-06-01
   changes:
