--- a/README
+++ b/README
@@ -1,59 +1,162 @@
-h1. RedCloth
+= RedCloth - Textile and Markdown Hybrid for Ruby
 
+Homepage::  http://whytheluckystiff.net/ruby/redcloth/
+Author::    why the lucky stiff (http://whytheluckystiff.net/)
+Copyright:: (cc) 2004 why the lucky stiff (and his puppet organizations.)
+License::   BSD
 
-h2. Humane text for Ruby
+(see http://hobix.com/textile/ for a Textile Reference.)
 
-RedCloth is a module for using Textile in Ruby.  Textile is a
-text format.  A very simple text format.  Another stab at making
-readable text that can be converted to HTML.
+Based on (and also inspired by) both:
 
-Textile is (c) 2003 Dean Allen.  All rights reserved.
-You can read more "here":http://www.textism.com/tools/textile/.
+PyTextile: http://diveintomark.org/projects/textile/textile.py.txt
+Textism for PHP: http://www.textism.com/tools/textile/
 
-RedCloth is also based on PyTextile, which is:
-Copyright (c) 2003, Mark Pilgrim, http://diveintomark.org/
-All rights reserved.  You can read more about PyTextile
-"here":http://diveintomark.org/projects/pytextile/.
+= RedCloth
 
+RedCloth is a Ruby library for converting Textile and/or Markdown
+into HTML.  You can use either format, intermingled or separately.
+You can also extend RedCloth to honor your own custom text stylings.
 
-h2. Installing RedCloth
+RedCloth users are encouraged to use Textile if they are generating
+HTML and to use Markdown if others will be viewing the plain text.
 
-To install RedCloth via raa-install:
+== What is Textile?
 
-  raa-install -i redcloth
+Textile is a simple formatting style for text
+documents, loosely based on some HTML conventions.
 
-Or download RedCloth and simply run the install.rb like so:
+== Sample Textile Text
 
-<code>
-  ruby install.rb config
-  ruby install.rb setup
-  sudo ruby install.rb install
-</code>
+ h2. This is a title
 
+ h3. This is a subhead
 
-h2. Using RedCloth
+ This is a bit of paragraph.
 
-The RedCloth class is an extension of Ruby's String class.
-Use it like you would a String:
+ bq. This is a blockquote.
 
-<code>
-  >> r = RedCloth.new "*strong text* and _emphasized text_"
-  => "*strong text* and _emphasized text_"
-  >> r.gsub!( 'text', 'words' )
-  => "*strong words* and _emphasized words_"
-</code>
+= Writing Textile
 
-To generate HTML from your RedCloth object, use the
-@RedCloth#to_html@ method:
+A Textile document consists of paragraphs.  Paragraphs
+can be specially formatted by adding a small instruction
+to the beginning of the paragraph.
 
-<code>
-  >> r.to_html
-  => "<p><strong>strong words</strong> and <em>emphasized words</em></p>"
-</code>
+ h[n].   Header of size [n].
+ bq.     Blockquote.
+ #       Numeric list.
+ *       Bulleted list.
 
+== Quick Phrase Modifiers
 
-h2. The Textile language
+Quick phrase modifiers are also included, to allow formatting
+of small portions of text within a paragraph.
 
-See the "Textile home page":http://www.textism.com/tools/textile/ for
-details on the Textile language.
+ \_emphasis\_
+ \_\_italicized\_\_
+ \*strong\*
+ \*\*bold\*\*
+ ??citation??
+ -deleted text-
+ +inserted text+
+ ^superscript^
+ ~subscript~
+ @code@
+ %(classname)span%
 
+ ==notextile== (leave text alone)
+
+== Links
+
+To make a hypertext link, put the link text in "quotation 
+marks" followed immediately by a colon and the URL of the link.
+
+Optional: text in (parentheses) following the link text, 
+but before the closing quotation mark, will become a Title 
+attribute for the link, visible as a tool tip when a cursor is above it.
+
+Example:
+
+ "This is a link (This is a title) ":http://www.textism.com
+
+Will become:
+
+ <a href="http://www.textism.com" title="This is a title">This is a link</a>
+
+== Images
+
+To insert an image, put the URL for the image inside exclamation marks.
+
+Optional: text that immediately follows the URL in (parentheses) will 
+be used as the Alt text for the image. Images on the web should always 
+have descriptive Alt text for the benefit of readers using non-graphical 
+browsers.
+
+Optional: place a colon followed by a URL immediately after the 
+closing ! to make the image into a link.
+
+Example:
+
+ !http://www.textism.com/common/textist.gif(Textist)!
+
+Will become:
+
+ <img src="http://www.textism.com/common/textist.gif" alt="Textist" />
+
+With a link:
+
+ !/common/textist.gif(Textist)!:http://textism.com
+
+Will become:
+
+ <a href="http://textism.com"><img src="/common/textist.gif" alt="Textist" /></a>
+
+== Defining Acronyms
+
+HTML allows authors to define acronyms via the tag. The definition appears as a 
+tool tip when a cursor hovers over the acronym. A crucial aid to clear writing, 
+this should be used at least once for each acronym in documents where they appear.
+
+To quickly define an acronym in Textile, place the full text in (parentheses) 
+immediately following the acronym.
+
+Example:
+
+ ACLU(American Civil Liberties Union)
+
+Will become:
+
+ <acronym title="American Civil Liberties Union">ACLU</acronym>
+
+== Adding Tables
+
+In Textile, simple tables can be added by seperating each column by
+a pipe.
+
+    |a|simple|table|row|
+    |And|Another|table|row|
+
+Attributes are defined by style definitions in parentheses.
+
+    table(border:1px solid black).
+    (background:#ddd;color:red). |{}| | | |
+
+== Using RedCloth
+
+RedCloth is simply an extension of the String class, which can handle
+Textile formatting.  Use it like a String and output HTML with its
+RedCloth#to_html method.
+
+ doc = RedCloth.new "
+
+ h2. Test document
+
+ Just a simple test."
+
+ puts doc.to_html
+
+By default, RedCloth uses both Textile and Markdown formatting, with
+Textile formatting taking precedence.  If you want to turn off Markdown
+formatting, to boost speed and limit the processor:
+
+ class RedCloth::Textile.new( str )
