--- a/README
+++ b/README
@@ -10,6 +10,15 @@ Copyright:: (c) 2006 why the lucky stiff
 
 RedCloth is a Ruby library for converting Textile into HTML.
 
+== Installing
+
+RedCloth can be installed via RubyGems:
+
+  sudo gem install redcloth
+
+Or can be compiled from its Ragel source with <tt>rake compile</tt>.  Ragel 6.1 
+or greater is required to build RedCloth.
+
 == What is Textile?
 
 Textile is a simple formatting style for text
