--- a/README
+++ b/README
@@ -1,8 +1,8 @@
 = RedCloth - Textile parser for Ruby
 
-Homepage::  http://whytheluckystiff.net/ruby/redcloth/
-Author::    why the lucky stiff (http://whytheluckystiff.net/)
-Copyright:: (c) 2006 why the lucky stiff
+Homepage::  https://code.whytheluckystiff.net/redcloth/
+Author::    Jason Garber
+Copyright:: (c) 2008 Jason Garber
 
 (See http://hobix.com/textile/ for a Textile reference.)
 
