--- a/README
+++ b/README
@@ -50,10 +50,10 @@ to the beginning of the paragraph.
 Quick phrase modifiers are also included, to allow formatting
 of small portions of text within a paragraph.
 
- \_emphasis\_
- \_\_italicized\_\_
- \*strong\*
- \*\*bold\*\*
+ _emphasis_
+ __italicized__
+ *strong*
+ **bold**
  ??citation??
  -deleted text-
  +inserted text+
