--- a/README
+++ b/README
@@ -1,8 +1,9 @@
 = RedCloth - Textile parser for Ruby
 
-Homepage::  https://code.whytheluckystiff.net/redcloth/
+Homepage::  http://redcloth.org
 Author::    Jason Garber
 Copyright:: (c) 2008 Jason Garber
+License::   MIT
 
 (See http://hobix.com/textile/ for a Textile reference.)
 
