Restructured classes because rdoc couldn't handle modules in classes.
I had modules inside classes and rdoc didn't like that (and it was bad form anyway), so converted the RedCloth class into a module.  Breaks complete backward compatibility with extensions if the extension was declared inside the class directly rather than included.

--- a/README
+++ b/README
@@ -5,7 +5,7 @@ Author::    Jason Garber
 Copyright:: (c) 2008 Jason Garber
 License::   MIT
 
-(See http://hobix.com/textile/ for a Textile reference.)
+(See http://redcloth.org/textile/ for a Textile reference.)
 
 = RedCloth
 
