Dimensions in feet and inches use correct typographic characters. [#25 state:resolved]

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,7 @@
 *Edge*
 
+* Dimensions in feet and inches use correct typographic characters. #25
+
 * Limit overzealous superscript and subscript.  Sup/sub phrases must be surrounded by spaces or square brackets, as in Textile 2. #35
 
 * Fixed HTML before tables causing the opening table tag to be emitted twice. #33
