--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+*Edge*
+
+* 
+
+
 *4.0.3 (August 18, 2008)*
 
 * Fix NoMethodError: private method gsub!' called for nil:NilClass when two dimensions followed by a space. #38
