Fix missed inline modifiers wrapped in parentheses.
It was just the closing parentheses missing from the PUNCT definition. Also undid some bad things done while trying to fix missed caps wrapped in parentheses. [#45 state:resolved]

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,7 +2,7 @@
 
 * Added some very basic support for images in LaTeX. [virtualfunction]
 
-* Fixed missed caps wrapped in parentheses. #43
+* Fixed missed caps and inline modifiers wrapped in parentheses. #43, #45
 
 
 *4.0.3 (August 18, 2008)*
