Fixed an error on superscript/subscript parenthetical phrase.
Geez!  You guys find every little bug! I'm lovin' it! [#56 state:resolved]

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -14,6 +14,8 @@
 
 * Fixed an error when a link was badly nested in parentheses. #55
 
+* Fixed an error on superscript/subscript parenthetical phrase. #56
+
 
 *4.0.3 (August 18, 2008)*
 
