--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,9 +1,9 @@
-*Edge*
+=== Edge
 
 *
 
 
-*4.0.4 (October 1, 2008)*
+=== 4.0.4 / October 1, 2008
 
 * Added some very basic support for images in LaTeX. [virtualfunction]
 
@@ -28,14 +28,14 @@
 * Fixed empty block HTML disappearing. #64
 
 
-*4.0.3 (August 18, 2008)*
+=== 4.0.3 / August 18, 2008
 
 * Fix NoMethodError: private method gsub!' called for nil:NilClass when two dimensions followed by a space. #38
 
 * Fixed unititialized constant RedCloth::TextileDoc with Rails 2.1.  Came from a workaround for Rails bug #320 that was applied even when not necessary. #42
 
 
-*4.0.2 (August 15, 2008)*
+=== 4.0.2 / August 15, 2008
 
 * Fixed link references/aliases not being recognized when they include hyphens. #36
 
@@ -54,7 +54,7 @@
 * Fixed HTML block ending tags terminating blocks prematurely. #22
 
 
-*4.0.1 (July 24, 2008)*
+=== 4.0.1 / July 24, 2008
 
 * Fixed lines starting with dashes being recognized as a definition list when there were no definitions.
 
@@ -64,7 +64,7 @@
 * Fixed links including prior quoted phrases. #17
 
 
-*4.0.0 (July 21, 2008)*
+=== 4.0.0 / July 21, 2008
 
 * New SuperRedCloth (RedCloth 4.0) is a total rewrite using Ragel for the parsing.
 
