--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,7 @@
 === Edge
 
+* Made italics use the correct LaTeX tag: textit rather than emph. #98
+
 * Fixed custom block signatures calling built-in Ruby String methods. #92
 
 * Mentioned the three supported platforms and what's necessary to build RedCloth in the README file.
