Remove extra preformatted line breaks after extended block code.
This change makes it compatible with Textile 2 [#79 state:resolved]

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,7 @@
 === Edge
 
+* Remove extra preformatted line breaks after extended block code. #79
+
 * Fix inline <notextile> being recognized as block <notextile>. #81
 
 * Allow leading spaces on lists for backward compatibility with RedCloth 3.x. #89
