Added a pure-ruby version of the parser for times when you can't compile the C or Java extensions.  You should avoid using it if at all possible because it is 32 times slower (and has some other problems, too)!
Squashed commit of the following:

commit d82359a74e543a6c25f5783983926c117045e0bb
Author: Jason Garber <jg@jasongarber.com>
Date:   Mon Mar 16 14:44:20 2009 -0400

    Update with best code style for pureruby (result of optimization was F1)

commit aa01f61fb075a50d44c29f0831c6b2cb3ee90bee
Author: Jason Garber <jg@jasongarber.com>
Date:   Mon Mar 16 13:17:32 2009 -0400

    Fix latex double-escaping some characters in pureruby parser

commit 7a09a7c25b2087d9b6f658b3d57443668cc41ef8
Author: Jason Garber <jg@jasongarber.com>
Date:   Mon Mar 16 09:08:08 2009 -0400

    Update profiler so rake pureruby optimize works

commit ffd93efc1228be4e245bde536518f60bd47aa6be
Author: Jason Garber <jg@jasongarber.com>
Date:   Sun Mar 15 12:26:46 2009 -0400

    cleanup unneeded eof variable

commit dc1b0f89d1ff868c285ad1d0eaa2e494757950ea
Author: Jason Garber <jg@jasongarber.com>
Date:   Sun Mar 15 11:46:30 2009 -0400

    Fix custom tag fallback

commit e10c378f57a232915efc42f8d78859aae55b7a0a
Author: Jason Garber <jg@jasongarber.com>
Date:   Sun Mar 15 11:35:41 2009 -0400

    Fixed attributes getting escaped multiple times because of passing by reference

commit 20c50513f521299d1917fcefa7fb2aaaf149117e
Author: Jason Garber <jg@jasongarber.com>
Date:   Sun Mar 15 11:13:12 2009 -0400

    fix list continuation (hope JRuby works; can't test from this machine)

commit 5000560e28945910d41b580bd3bb01fb75167536
Author: Jason Garber <jg@jasongarber.com>
Date:   Sun Mar 15 10:31:03 2009 -0400

    Fix attribute parser running the wrong machine

commit 71d7f9d1c0fcd654b39c41de3a341e8f6d95c400
Author: Jason Garber <jg@jasongarber.com>
Date:   Sun Mar 15 10:12:03 2009 -0400

    Fix TRANSFORM macro

commit 9824be7410ef9224c80227105059e732f9a908a3
Author: Jason Garber <jg@jasongarber.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,7 @@
 === Edge
 
+* Added a pure-ruby version of the parser for times when you can't compile the C or Java extensions.  You should avoid using it if at all possible because it is 32 times slower (and has some other problems, too)! [Jason Garber]
+
 * Ignore spaces and tabs on blank lines between blocks. #120 [Jason Garber]
 
 * Allow HTML tags with quoted attributes to be inside link text.  To do this, I had to remove the possibility that attributes in HTML tags could have spaces around the equals sign or unquoted attributes.  This change also greatly expands the complexity of the state machine, so compilation takes a long time. Sorry. [Jason Garber]
